2002-04-13 Baptiste Lepilleur <gaiacrtn@free.fr>

	* NEWS: updated

	* doc/other_documentation.dox: addded new module for test plug-in.

	* include/msvc6/DSPlugin/TestRunnerDSPlugin.h:
	* include/msvc6/DSPlugin/TestRunnerDSPlugin_i.c: added. Those file are
	  generated by project src/msvc/DSPlugin. They are provided to allow
	  compilation of TestRunner without compiling DSPlugIn which does not 
	  build on VC++ 7.

	* examples/examples.dsw: removed DSPlugIn for workspace (fail to build 
	  with VC++ 7). Added DllPlugInTester.dsp to workspace.

	* examples/msvc6/TestPlugIn/TestPlugIn.dsp: added post-build unit testing
	  using the new DllPlugInTester.

	* examples/msvc6/EasyTestPlugIn/*: a new project that
	  demonstrates the use of CPPUNIT_TESTPLUGIN_IMPL to create a test plug-in.
	  
	* src/cppunit/cppunit.dsw:
	* src/TestPlugInRunner.dsw:
	* src/TestRunner.dsw: removed. Should use src/CppUnitLibraries.dsw instead.

	* include/cppunit/ui/text/TestRunner.h:
	* src/cppunit/TextTestRunner.cpp: removed findTestName() method. Replaced
	  by Test::findTest().

	* src/msvc6/DSPlugIn/DSPlugIn.dsp:
	* src/msvc6/DSPlugIn/DSAddIn.h: changed include for add-in. MIDL generates
	  files in sub-directory ToAddToDistribution. Generated file should be 
	  copied to include/msvc6/DSPlugin when modified. This remove the dependecy
	  of MfcTestRunner on DSPlugIn.

	* src/msvc6/testrunner/ListCtrlFormatter.h:
	* src/msvc6/testrunner/ListCtrlFormatter.cpp: added GetNextColumnIndex().

	* src/msvc6/testrunner/src/TestRunnerDlg.h:
	* src/msvc6/testrunner/src/TestRunnerDlg.cpp: set column number in 
	  MsDevCallerListCtrl when initializing the list.

	* src/msvc6/testrunner/src/MsDevCallerListCtrl.h:
	* src/msvc6/testrunner/src/MsDevCallerListCtrl.cpp: column indexes for 
	  file and line number are no longer static. Added methods to set those 
	  indexes. Changed DSPlugIn header name.

	* include/msvc6/testrunner/TestPlugInInterface.h: fixed inclusion of